--- a/index.html
+++ b/index.html
@@ -1,38 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
   <head>
-    <!-- Informações da Página-->
+    <!-- PAGE INFO -->
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OriginSix</title>
 
-    <!--STYLES-->
+    <!-- STYLES -->
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header id="header">
       <nav class="container">
-        <a class="logo" href="#">BeautySalon.</a>
-        <div>...</div>
+        <a class="logo" href="#">beauty<span>salon</span>.</a>
+        <div class="menu">...</div>
       </nav>
     </header>
 
     <main>
-      <section>
-        <div class="container">
-          <img
-            src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MXw4ODIzNDMwfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
-            alt="Mulher sorrindo penteando outra mulher"
-          />
-          <h1>Saude natural para seus cabelos</h1>
-          <p>
-            Um salão exclusivo em São Paulo, especializado em tratamentos
-            naturais
-          </p>
-          <a href="#">Agendar um horário</a>
+      <section class="section" id="home">
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+              alt="Mulher sorrindo penteando outra mulher"
+            />
+          </div>
+          <div class="text">
+            <h1>Saúde natural para os seus cabelos</h1>
+            <p>
+              Um salão exclusivo em São Paulo, especializado em tratamentos
+              naturais.
+            </p>
+            <a class="button" href="#">Agendar um horário</a>
+          </div>
         </div>
+      </section>
+
+      <div class="divider-1"></div>
+
+      <section class="section">
+        <div class="container">outra section</div>
       </section>
     </main>
   </body>
 </html>
+
+<!-- TESTE DE COMMIT NO GIT -->
