--- a/index.html
+++ b/index.html
@@ -18,9 +18,21 @@
   </head>
   <body>
     <header id="header">
-      <nav class="container">
+      <nav class="container show">
         <a class="logo" href="#">beauty<span>salon</span>.</a>
-        <div class="menu">...</div>
+        <!-- MENU -->
+        <div class="menu">
+          <ul class="grid">
+            <li><a class="title" href="#home">Início</a></li>
+            <li><a class="title" href="#about">Sobre</a></li>
+            <li><a class="title" href="#services">Serviços</a></li>
+            <li><a class="title" href="#testimonials">Depoimentos</a></li>
+            <li><a class="title" href="contact">Contato</a></li>
+          </ul>
+        </div>
+        <!-- MENU -->
+        <div class="open">...</div>
+        <div class="close">X</div>
       </nav>
     </header>
 
@@ -34,7 +46,7 @@
             />
           </div>
           <div class="text">
-            <h1>Saúde natural para os seus cabelos</h1>
+            <h2 class="title">Saúde natural para os seus cabelos</h2>
             <p>
               Um salão exclusivo em São Paulo, especializado em tratamentos
               naturais.
@@ -46,8 +58,17 @@
 
       <div class="divider-1"></div>
 
-      <section class="section">
-        <div class="container">outra section</div>
+      <section class="section" id="abaut">
+        <div class="container grid">Sobre</div>
+      </section>
+      <section class="section" id="services">
+        <div class="container grid">Serviços</div>
+      </section>
+      <section class="section" id="testimonials">
+        <div class="container grid">Depoimentos</div>
+      </section>
+      <section class="section" id="contact">
+        <div class="container grid">Contato</div>
       </section>
     </main>
   </body>
