--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OriginSix</title>
 
+    <!-- ICONS -->
+
+    <link rel="stylesheet" href="assets/icomoon/style.css" />
+
     <!-- STYLES -->
     <link rel="stylesheet" href="style.css" />
 
@@ -18,7 +22,7 @@
   </head>
   <body>
     <header id="header">
-      <nav class="container show">
+      <nav class="container">
         <a class="logo" href="#">beauty<span>salon</span>.</a>
         <!-- MENU -->
         <div class="menu">
@@ -31,8 +35,8 @@
           </ul>
         </div>
         <!-- MENU -->
-        <div class="open">...</div>
-        <div class="close">X</div>
+        <div class="toggle icon-menu"></div>
+        <div class="toggle icon-close"></div>
       </nav>
     </header>
 
@@ -59,8 +63,41 @@
       <div class="divider-1"></div>
 
       <section class="section" id="abaut">
-        <div class="container grid">Sobre</div>
+        <div class="container grid">
+          <div clas="image">
+            <img
+              src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+              alt="Tres mulheres sorrindo e brincando com tesouras"
+            />
+          </div>
+          <div class="text">
+            <h2 class="title">Sobre Nós</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+              porro dolorum vero quasi quisquam, nisi fugit corporis animi
+              sapiente iusto. Quia ipsam facere labore mollitia accusamus
+              sapiente, possimus doloribus consequuntur!
+            </p>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Voluptatibus iste dolores delectus autem sit officiis blanditiis
+              dolor numquam incidunt! Maxime cumque sed doloremque, possimus
+              ipsam aspernatur eius natus nostrum! Tenetur?
+            </p>
+            <br />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatem, ratione facilis suscipit dignissimos dolore adipisci.
+              Non numquam quis nulla repudiandae quasi minus asperiores
+              perferendis rerum ab eum, consequatur exercitationem dolores!
+            </p>
+          </div>
+        </div>
       </section>
+
+      <div class="divider-2"></div>
+
       <section class="section" id="services">
         <div class="container grid">Serviços</div>
       </section>
@@ -71,6 +108,8 @@
         <div class="container grid">Contato</div>
       </section>
     </main>
+
+    <script src="main.js"></script>
   </body>
 </html>
 
