--- a/index.html
+++ b/index.html
@@ -99,7 +99,43 @@
       <div class="divider-2"></div>
 
       <section class="section" id="services">
-        <div class="container grid">Serviços</div>
+        <div class="container grid">
+          <header>
+            <h2 class="title">Serviços</h2>
+            <p>
+              Lorem ipsum dolor sit amet <strong> adipisicing</strong> Lorem
+              ipsum dolor sit amet consectetur adipisicing elit. Alias libero
+              quod fugit id voluptatem elit.
+            </p>
+          </header>
+          <div class="cards">
+            <div class="cards">
+              <div class="icon-woman-hair"></div>
+              <h3 class="title">Terapia Capilar</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+                distinctio vero ducimus deleniti cumque reiciendis laudantium?
+              </p>
+            </div>
+            <div class="cards">
+              <div class="icon-trim"></div>
+              <h3 class="title">Cortes</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates distinctio enim similique ab soluta? Libero debitis.
+              </p>
+            </div>
+            <div class="cards">
+              <div class="icon-cosmetic"></div>
+              <h3 class="title">Tratamentos</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Consectetur esse voluptates iure dicta sunt voluptatum
+                exercitationem.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
       <section class="section" id="testimonials">
         <div class="container grid">Depoimentos</div>
