--- a/index.html
+++ b/index.html
@@ -108,25 +108,25 @@
               quod fugit id voluptatem elit.
             </p>
           </header>
-          <div class="cards">
-            <div class="cards">
-              <div class="icon-woman-hair"></div>
+          <div class="cards grid">
+            <div class="card">
+              <i class="icon-woman-hair"></i>
               <h3 class="title">Terapia Capilar</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
                 distinctio vero ducimus deleniti cumque reiciendis laudantium?
               </p>
             </div>
-            <div class="cards">
-              <div class="icon-trim"></div>
+            <div class="card">
+              <i class="icon-trim"></i>
               <h3 class="title">Cortes</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Voluptates distinctio enim similique ab soluta? Libero debitis.
               </p>
             </div>
-            <div class="cards">
-              <div class="icon-cosmetic"></div>
+            <div class="card">
+              <i class="icon-cosmetic"></i>
               <h3 class="title">Tratamentos</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
