--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OriginSix</title>
 
-    <!-- ICONS -->
-
-    <link rel="stylesheet" href="assets/icomoon/style.css" />
+    <!-- Icones -->
+    <link rel="stylesheet" href="assets/fonts/style.css" />
 
     <!-- STYLES -->
     <link rel="stylesheet" href="style.css" />
@@ -24,17 +23,17 @@
     <header id="header">
       <nav class="container">
         <a class="logo" href="#">beauty<span>salon</span>.</a>
-        <!-- MENU -->
+        <!-- menu -->
         <div class="menu">
           <ul class="grid">
             <li><a class="title" href="#home">Início</a></li>
             <li><a class="title" href="#about">Sobre</a></li>
             <li><a class="title" href="#services">Serviços</a></li>
             <li><a class="title" href="#testimonials">Depoimentos</a></li>
-            <li><a class="title" href="contact">Contato</a></li>
+            <li><a class="title" href="#contact">Contato</a></li>
           </ul>
         </div>
-        <!-- MENU -->
+        <!-- /menu -->
         <div class="toggle icon-menu"></div>
         <div class="toggle icon-close"></div>
       </nav>
@@ -62,35 +61,35 @@
 
       <div class="divider-1"></div>
 
-      <section class="section" id="abaut">
+      <section class="section" id="about">
         <div class="container grid">
-          <div clas="image">
+          <div class="image">
             <img
-              src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-              alt="Tres mulheres sorrindo e brincando com tesouras"
+              src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+              alt="3 mulheres sorrindo"
             />
           </div>
           <div class="text">
-            <h2 class="title">Sobre Nós</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
-              porro dolorum vero quasi quisquam, nisi fugit corporis animi
-              sapiente iusto. Quia ipsam facere labore mollitia accusamus
-              sapiente, possimus doloribus consequuntur!
-            </p>
-            <br />
+            <h2 class="title">Sobre nós</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Voluptatibus iste dolores delectus autem sit officiis blanditiis
-              dolor numquam incidunt! Maxime cumque sed doloremque, possimus
-              ipsam aspernatur eius natus nostrum! Tenetur?
+              Necessitatibus deleniti perferendis vel molestiae soluta, quaerat
+              beatae dicta ducimus praesentium architecto harum dolorum
+              distinctio illo earum assumenda itaque. Omnis, quam repellat.
             </p>
             <br />
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem, ratione facilis suscipit dignissimos dolore adipisci.
-              Non numquam quis nulla repudiandae quasi minus asperiores
-              perferendis rerum ab eum, consequatur exercitationem dolores!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+              illum ratione impedit quae eum quis adipisci asperiores, est
+              doloribus distinctio excepturi minima eius dolore! Perferendis
+              laborum illo aspernatur repellendus ipsum.
+            </p>
+            <br />
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed
+              exercitationem, illum sapiente quasi hic iusto odio maiores esse
+              quaerat quis necessitatibus at odit, dolores dicta, officia ab
+              quos. Provident, quae.
             </p>
           </div>
         </div>
@@ -103,50 +102,44 @@
           <header>
             <h2 class="title">Serviços</h2>
             <p>
-              Lorem ipsum dolor sit amet <strong> adipisicing</strong> Lorem
-              ipsum dolor sit amet consectetur adipisicing elit. Alias libero
-              quod fugit id voluptatem elit.
+              Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já
+              conquistou clientes de inúmeros países com seus tratamentos
+              exclusivos e totalmente naturais
             </p>
           </header>
           <div class="cards grid">
             <div class="card">
               <i class="icon-woman-hair"></i>
-              <h3 class="title">Terapia Capilar</h3>
+              <h3 class="title">Terapia capilar</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-                distinctio vero ducimus deleniti cumque reiciendis laudantium?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+                distinctio neque blanditiis, dolorem aperiam nulla explicabo
+                asperiores
               </p>
             </div>
             <div class="card">
               <i class="icon-trim"></i>
               <h3 class="title">Cortes</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptates distinctio enim similique ab soluta? Libero debitis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+                distinctio neque blanditiis, dolorem aperiam nulla explicabo
+                asperiores
               </p>
             </div>
             <div class="card">
               <i class="icon-cosmetic"></i>
               <h3 class="title">Tratamentos</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Consectetur esse voluptates iure dicta sunt voluptatum
-                exercitationem.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+                distinctio neque blanditiis, dolorem aperiam nulla explicabo
+                asperiores
               </p>
             </div>
           </div>
         </div>
-      </section>
-      <section class="section" id="testimonials">
-        <div class="container grid">Depoimentos</div>
-      </section>
-      <section class="section" id="contact">
-        <div class="container grid">Contato</div>
       </section>
     </main>
 
     <script src="main.js"></script>
   </body>
 </html>
-
-<!-- TESTE DE COMMIT NO GIT -->
