--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>OriginSix</title>
 
     <!-- Icones -->
-    <link rel="stylesheet" href="assets/fonts/style.css" />
+    <link rel="stylesheet" href="assets/icomoon/style.css" />
 
     <!-- STYLES -->
     <link rel="stylesheet" href="style.css" />
