--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>OriginSix</title>
 
     <!-- Icones -->
-    <link rel="stylesheet" href="assets/icomoon/style.css" />
+    <link rel="stylesheet" href="assets/fonts/style.css" />
 
     <!-- Swiper -->
     <link
       rel="stylesheet"
-      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
 
     <!-- STYLES -->
@@ -46,7 +46,7 @@
     </header>
 
     <main>
-      <!-- Home -->
+      <!-- HOME -->
       <section class="section" id="home">
         <div class="container grid">
           <div class="image">
@@ -68,7 +68,7 @@
 
       <div class="divider-1"></div>
 
-      <!-- Abaut -->
+      <!-- ABOUT -->
       <section class="section" id="about">
         <div class="container grid">
           <div class="image">
@@ -105,7 +105,7 @@
 
       <div class="divider-2"></div>
 
-      <!-- Services -->
+      <!-- SERVICES -->
       <section class="section" id="services">
         <div class="container grid">
           <header>
@@ -153,7 +153,6 @@
       <!-- TESTIMONIALS -->
       <section class="section" id="testimonials">
         <div class="container swiper">
-          <!-- Adicionar aqui a classe swiper -->
           <header>
             <h2 class="title">Depoimentos de quem já passou por aqui</h2>
           </header>
@@ -169,7 +168,7 @@
                   </p>
                   <cite>
                     <img
-                      src="https://randomuser.me/api/portraits/women/57.jpg"
+                      src="assets/fotos/10.jpeg"
                       alt="Foto de Wanessa Souza"
                     />
                     Wanessa Souza
@@ -187,7 +186,7 @@
                   </p>
                   <cite>
                     <img
-                      src="https://randomuser.me/api/portraits/women/22.jpg"
+                      src="assets/fotos/56.jpeg"
                       alt="Foto de Franciele Venega"
                     />
                     Franciele Venega
@@ -205,7 +204,7 @@
                   </p>
                   <cite>
                     <img
-                      src="https://randomuser.me/api/portraits/women/10.jpg"
+                      src="assets/fotos/26.jpeg"
                       alt="Fotos de Valeska Fabris"
                     />
                     Valeska Fabris
@@ -222,16 +221,19 @@
 
       <div class="divider-2"></div>
 
-      <!-- Contact -->
+      <!-- CONTACT -->
       <section class="section" id="contact">
         <div class="container grid">
           <div class="text">
-            <h2 class="title">Entre em contato com a gente</h2>
+            <h2 class="title">Entre em contato com a gente!</h2>
             <p>
               Entre em contato com a Beautysalon, queremos tirar suas dúvidas,
               ouvir suas críticas e sugestões.
             </p>
-            <a href="#" class="button"
+            <a
+              href="https://api.whatsapp.com/send?phone=+5511998456754&text=Oi! Gostaria de agendar um horário"
+              class="button"
+              target="_blank"
               ><i class="icon-whatsapp"></i> Entrar em contato</a
             >
           </div>
@@ -239,18 +241,21 @@
           <div class="links">
             <ul class="grid">
               <li><i class="icon-phone"></i> 11 99845-6754</li>
-              <li><i class="icon-map-pin"></i> R. Amauri souza, 346</li>
-              <li><i class="icon-mail"></i>contato@beautysalon.com</li>
+              <li><i class="icon-map-pin"></i> R. Amauri Souza, 346</li>
+              <li><i class="icon-mail"></i> contato@beautysalon.com</li>
             </ul>
           </div>
         </div>
       </section>
     </main>
 
-    <!-- Swiper -->
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <!-- swiper -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-    <!-- Main.js -->
+    <!-- scrollreveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- main.js -->
     <script src="main.js"></script>
   </body>
 </html>
