--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>OriginSix</title>
 
     <!-- Icones -->
-    <link rel="stylesheet" href="assets/fonts/style.css" />
+    <link rel="stylesheet" href="assets/icomoon/style.css" />
 
     <!-- Swiper -->
     <link
@@ -168,7 +168,7 @@
                   </p>
                   <cite>
                     <img
-                      src="assets/fotos/10.jpeg"
+                      src="https://randomuser.me/api/portraits/women/32.jpg"
                       alt="Foto de Wanessa Souza"
                     />
                     Wanessa Souza
@@ -186,7 +186,7 @@
                   </p>
                   <cite>
                     <img
-                      src="assets/fotos/56.jpeg"
+                      src="https://randomuser.me/api/portraits/women/55.jpg"
                       alt="Foto de Franciele Venega"
                     />
                     Franciele Venega
@@ -204,7 +204,7 @@
                   </p>
                   <cite>
                     <img
-                      src="assets/fotos/26.jpeg"
+                      src="https://randomuser.me/api/portraits/women/22.jpg"
                       alt="Fotos de Valeska Fabris"
                     />
                     Valeska Fabris
@@ -247,7 +247,32 @@
           </div>
         </div>
       </section>
+
+      <div class="divider-1"></div>
     </main>
+
+    <footer class="section">
+      <div class="container grid">
+        <div class="brand">
+          <a class="logo logo-alt" href="#home">beauty<span>salon</span>.</a>
+          <p>2021 Beautysalon.</p>
+          <p>Todos os direitos reservados.</p>
+        </div>
+        <div class="social">
+          <a href="https://www.instagram.com/" target="blank"
+            ><i class="icon-instagram"></i
+          ></a>
+          <a href="https://pt-br.facebook.com/" target="blank"
+            ><i class="icon-facebook"></i
+          ></a>
+          <a href="https://www.youtube.com/" target="blank"
+            ><i class="icon-youtube"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
+
+    <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
 
     <!-- swiper -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
