4 aula Commit final

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>OriginSix</title>
 
     <!-- Icones -->
-    <link rel="stylesheet" href="assets/icomoon/style.css" />
+    <link rel="stylesheet" href="assets/fonts/style.css" />
 
     <!-- Swiper -->
     <link
@@ -168,7 +168,7 @@
                   </p>
                   <cite>
                     <img
-                      src="https://randomuser.me/api/portraits/women/32.jpg"
+                      src="assets/fotos/10.jpeg"
                       alt="Foto de Wanessa Souza"
                     />
                     Wanessa Souza
@@ -186,7 +186,7 @@
                   </p>
                   <cite>
                     <img
-                      src="https://randomuser.me/api/portraits/women/55.jpg"
+                      src="assets/fotos/56.jpeg"
                       alt="Foto de Franciele Venega"
                     />
                     Franciele Venega
@@ -204,7 +204,7 @@
                   </p>
                   <cite>
                     <img
-                      src="https://randomuser.me/api/portraits/women/22.jpg"
+                      src="assets/fotos/26.jpeg"
                       alt="Fotos de Valeska Fabris"
                     />
                     Valeska Fabris
@@ -255,17 +255,18 @@
       <div class="container grid">
         <div class="brand">
           <a class="logo logo-alt" href="#home">beauty<span>salon</span>.</a>
-          <p>2021 Beautysalon.</p>
+          <p>©2021 Beautysalon.</p>
           <p>Todos os direitos reservados.</p>
         </div>
+
         <div class="social">
-          <a href="https://www.instagram.com/" target="blank"
-            ><i class="icon-instagram"></i
+          <a href="https://instagram.com" target="_blank">
+            <i class="icon-instagram"></i>
+          </a>
+          <a href="https://facebook.com" target="_blank">
+            <i class="icon-facebook"></i
           ></a>
-          <a href="https://pt-br.facebook.com/" target="blank"
-            ><i class="icon-facebook"></i
-          ></a>
-          <a href="https://www.youtube.com/" target="blank"
+          <a href="https://youtube.com" target="_blank"
             ><i class="icon-youtube"></i
           ></a>
         </div>
