--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- PAGE INFO -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OriginSix</title>
+    <title>Michelle Martins Studio</title>
 
     <!-- Icones -->
     <link rel="stylesheet" href="assets/fonts/style.css" />
@@ -28,7 +28,7 @@
   <body>
     <header id="header">
       <nav class="container">
-        <a class="logo" href="#">beauty<span>salon</span>.</a>
+        <a class="logo" href="#">Michelle Martins<span>Studio</span>.</a>
         <!-- menu -->
         <div class="menu">
           <ul class="grid">
@@ -56,10 +56,9 @@
             />
           </div>
           <div class="text">
-            <h2 class="title">Saúde natural para os seus cabelos</h2>
+            <h2 class="title">As mais belas noivas para o casamento</h2>
             <p>
-              Um salão exclusivo em São Paulo, especializado em tratamentos
-              naturais.
+              Um salão exclusivo em São Paulo, especializado em atendimento a noivas e maquiagem profissional.
             </p>
             <a class="button" href="#">Agendar um horário</a>
           </div>
@@ -80,24 +79,15 @@
           <div class="text">
             <h2 class="title">Sobre nós</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Necessitatibus deleniti perferendis vel molestiae soluta, quaerat
-              beatae dicta ducimus praesentium architecto harum dolorum
-              distinctio illo earum assumenda itaque. Omnis, quam repellat.
+              Somos um salão de beleza especializado em preparação de noivas para casamento, madrinhas e mãe da noiva, maquiagem para eventos como casamentos, debutantes, aniversários, festas, formaturas e etc...
             </p>
             <br />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
-              illum ratione impedit quae eum quis adipisci asperiores, est
-              doloribus distinctio excepturi minima eius dolore! Perferendis
-              laborum illo aspernatur repellendus ipsum.
+              Fazemos todo tipo de tratamento para cabelos com produtos de alta qualidade e com mão de obra especializada.
             </p>
             <br />
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed
-              exercitationem, illum sapiente quasi hic iusto odio maiores esse
-              quaerat quis necessitatibus at odit, dolores dicta, officia ab
-              quos. Provident, quae.
+              Prezamos pelo bom atendimento com qualidade e seriedade no que fazemos.
             </p>
           </div>
         </div>
@@ -111,37 +101,30 @@
           <header>
             <h2 class="title">Serviços</h2>
             <p class="subtitle">
-              Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já
-              conquistou clientes de inúmeros países com seus tratamentos
-              exclusivos e totalmente naturais
+              Com mão de obra e produtos de qualidade, a <strong>Michele Hair</strong> já
+              conquistou inúmeros clientes com seus tratamentos exclusivos.
             </p>
           </header>
           <div class="cards grid">
             <div class="card">
               <i class="icon-woman-hair"></i>
-              <h3 class="title">Terapia capilar</h3>
+              <h3 class="title">Maquiagem</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-                distinctio neque blanditiis, dolorem aperiam nulla explicabo
-                asperiores
+                Maquiagem especializada para casamentos, festas, formaturas e debutantes para realçar a linda mulher que você é.
               </p>
             </div>
             <div class="card">
               <i class="icon-trim"></i>
               <h3 class="title">Cortes</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-                distinctio neque blanditiis, dolorem aperiam nulla explicabo
-                asperiores
+                Cortes classicos e inovadores, com técnicas atuais e aplicadas através de nossos profissionais qualificados.
               </p>
             </div>
             <div class="card">
               <i class="icon-cosmetic"></i>
               <h3 class="title">Tratamentos</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-                distinctio neque blanditiis, dolorem aperiam nulla explicabo
-                asperiores
+                Tratamentos para seus cabelos com produtos de qualidade, testados e aprovados pelos orgãos copetentes.
               </p>
             </div>
           </div>
@@ -162,9 +145,7 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Rerum blanditiis saepe nam excepturi explicabo ipsa error
-                    ipsam neque
+                    O melhor salão que eu poderia escolher, fiquei linda e todos elogiaram minha maquiagem e cabelo.
                   </p>
                   <cite>
                     <img
@@ -180,9 +161,7 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Rerum blanditiis saepe nam excepturi explicabo ipsa error
-                    ipsam neque
+                    Muito atenciosa e com produtos de qualidade me deixou linda para o evento que marcou minha vida, muito obrigado
                   </p>
                   <cite>
                     <img
@@ -198,9 +177,7 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Rerum blanditiis saepe nam excepturi explicabo ipsa error
-                    ipsam neque
+                    Nossa, como fiquei linda, nem sabia que eu poderia ficar tão linda assim.
                   </p>
                   <cite>
                     <img
@@ -227,7 +204,7 @@
           <div class="text">
             <h2 class="title">Entre em contato com a gente!</h2>
             <p>
-              Entre em contato com a Beautysalon, queremos tirar suas dúvidas,
+              Entre em contato com a Michele Hair, queremos tirar suas dúvidas,
               ouvir suas críticas e sugestões.
             </p>
             <a
@@ -240,9 +217,9 @@
 
           <div class="links">
             <ul class="grid">
-              <li><i class="icon-phone"></i> 11 99845-6754</li>
-              <li><i class="icon-map-pin"></i> R. Amauri Souza, 346</li>
-              <li><i class="icon-mail"></i> contato@beautysalon.com</li>
+              <li><i class="icon-phone"></i> 11 99999-9999</li>
+              <li><i class="icon-map-pin"></i> R. sua rua, 999</li>
+              <li><i class="icon-mail"></i> contato@michelehair.com</li>
             </ul>
           </div>
         </div>
@@ -254,8 +231,8 @@
     <footer class="section">
       <div class="container grid">
         <div class="brand">
-          <a class="logo logo-alt" href="#home">beauty<span>salon</span>.</a>
-          <p>©2021 Beautysalon.</p>
+          <a class="logo logo-alt" href="#home">Michele<span>Hair</span>.</a>
+          <p>©2022 MicheleHair.</p>
           <p>Todos os direitos reservados.</p>
         </div>
 
