--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- PAGE INFO -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Michelle Martins Studio</title>
+    <title>Grazi Guimaraez</title>
 
     <!-- Icones -->
     <link rel="stylesheet" href="assets/fonts/style.css" />
@@ -28,7 +28,7 @@
   <body>
     <header id="header">
       <nav class="container">
-        <a class="logo" href="#">Michelle Martins<span>Studio</span>.</a>
+        <a class="logo" href="#">Grazi<span>Guimaraez</span>.</a>
         <!-- menu -->
         <div class="menu">
           <ul class="grid">
@@ -51,14 +51,14 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-              alt="Mulher sorrindo penteando outra mulher"
+              src="./assets/fotos/006.jpg"
+              alt="Mesa de Baralho Cigano"
             />
           </div>
           <div class="text">
-            <h2 class="title">As mais belas noivas para o casamento</h2>
+            <h2 class="title">Autoconhecimento e Direcionamento de Vida</h2>
             <p>
-              Um salão exclusivo em São Paulo, especializado em atendimento a noivas e maquiagem profissional.
+              Através do baralho cigando mudando vidas e aconselhando pessoas no mundo todo.
             </p>
             <a class="button" href="#">Agendar um horário</a>
           </div>
@@ -72,22 +72,22 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-              alt="3 mulheres sorrindo"
+              src="./assets/fotos/002.jpg"
+              alt="#"
             />
           </div>
           <div class="text">
-            <h2 class="title">Sobre nós</h2>
+            <h2 class="title">Grazi Guimaraez</h2>
             <p>
-              Somos um salão de beleza especializado em preparação de noivas para casamento, madrinhas e mãe da noiva, maquiagem para eventos como casamentos, debutantes, aniversários, festas, formaturas e etc...
+              Aconselhando e direcionando a vida das pessoas através das cartas de baralho cigano.
             </p>
             <br />
             <p>
-              Fazemos todo tipo de tratamento para cabelos com produtos de alta qualidade e com mão de obra especializada.
+              Pessoas do mundo todo sendo aconselhadas através do oraculo e podendo ter um direcionamento para que possam seguir sua vida em sua plenitude.
             </p>
             <br />
             <p>
-              Prezamos pelo bom atendimento com qualidade e seriedade no que fazemos.
+              Podemos saber que caminho tomar, para onde podemos ir e como reagir aos percalsos da vida, dando um alento aqueles que o procuram.
             </p>
           </div>
         </div>
