--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Place your kit's code here -->
+    <script src="https://kit.fontawesome.com/5d4e57c27d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header id="header">
@@ -51,12 +53,12 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="./assets/fotos/006.jpg"
+              src="./assets/fotos/021.png"
               alt="Mesa de Baralho Cigano"
             />
           </div>
           <div class="text">
-            <h2 class="title">Autoconhecimento e Direcionamento de Vida</h2>
+            <h2 class="title">Autoconhecimento e Direcionamento</h2>
             <p>
               Através do baralho cigando mudando vidas e aconselhando pessoas no mundo todo.
             </p>
@@ -72,7 +74,7 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="./assets/fotos/002.jpg"
+              src="./assets/fotos/020.png"
               alt="#"
             />
           </div>
@@ -101,28 +103,29 @@
           <header>
             <h2 class="title">Serviços</h2>
             <p class="subtitle">
-              Com mão de obra e produtos de qualidade, a <strong>Michele Hair</strong> já
-              conquistou inúmeros clientes com seus tratamentos exclusivos.
+              Com muitas vidas mudadas <strong>Grazi Guimaraez</strong> já
+              utiliza de todas as ferramentas disponíveis para lhe dar um direcionamento na vida.
             </p>
           </header>
           <div class="cards grid">
             <div class="card">
-              <i class="icon-woman-hair"></i>
-              <h3 class="title">Maquiagem</h3>
+              <i class="fa-regular fa-cards"></i>
+              <h3 class="title">Baralho Cigano</h3>
               <p>
                 Maquiagem especializada para casamentos, festas, formaturas e debutantes para realçar a linda mulher que você é.
               </p>
             </div>
             <div class="card">
-              <i class="icon-trim"></i>
-              <h3 class="title">Cortes</h3>
+              <i class="fa-regular fa-flower"></i>
+              <h3 class="title">Florais de Bach</h3>
               <p>
                 Cortes classicos e inovadores, com técnicas atuais e aplicadas através de nossos profissionais qualificados.
               </p>
             </div>
             <div class="card">
-              <i class="icon-cosmetic"></i>
-              <h3 class="title">Tratamentos</h3>
+            <!-- <i class="icon-cosmetic"></i> -->
+            <i class="fa-regular fa-atom"></i>
+              <h3 class="title">Magia Divina</h3>
               <p>
                 Tratamentos para seus cabelos com produtos de qualidade, testados e aprovados pelos orgãos copetentes.
               </p>
