--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Icones -->
     <link rel="stylesheet" href="assets/fonts/style.css" />
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 
     <!-- Swiper -->
     <link
@@ -24,8 +25,6 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <!-- Place your kit's code here -->
-    <script src="https://kit.fontawesome.com/5d4e57c27d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header id="header">
@@ -53,7 +52,7 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="./assets/fotos/021.png"
+              src="./assets/fotos/023.png"
               alt="Mesa de Baralho Cigano"
             />
           </div>
@@ -109,21 +108,21 @@
           </header>
           <div class="cards grid">
             <div class="card">
-              <i class="fa-regular fa-cards"></i>
+              <span class="lnr lnr-layers"></span>
               <h3 class="title">Baralho Cigano</h3>
               <p>
                 Maquiagem especializada para casamentos, festas, formaturas e debutantes para realçar a linda mulher que você é.
               </p>
             </div>
             <div class="card">
-              <i class="fa-regular fa-flower"></i>
+              <span class="lnr lnr-heart-pulse"></span>
               <h3 class="title">Florais de Bach</h3>
               <p>
                 Cortes classicos e inovadores, com técnicas atuais e aplicadas através de nossos profissionais qualificados.
               </p>
             </div>
             <div class="card">
-                        <i class="fa-regular fa-atom"></i>
+              <span class="lnr lnr-plus-circle"></span>
               <h3 class="title">Magia Divina</h3>
               <p>
                 Tratamentos para seus cabelos com produtos de qualidade, testados e aprovados pelos orgãos copetentes.
