--- a/index.html
+++ b/index.html
@@ -111,21 +111,21 @@
               <span class="lnr lnr-layers"></span>
               <h3 class="title">Baralho Cigano</h3>
               <p>
-                Maquiagem especializada para casamentos, festas, formaturas e debutantes para realçar a linda mulher que você é.
+                Atendimento com baralho cigano para aconselhamento e direcionamento da fase atual da sua vida, mostrando o que fazer para superar sua fase atual.
               </p>
             </div>
             <div class="card">
               <span class="lnr lnr-heart-pulse"></span>
               <h3 class="title">Florais de Bach</h3>
               <p>
-                Cortes classicos e inovadores, com técnicas atuais e aplicadas através de nossos profissionais qualificados.
+                Melhore sua saúde reduzindo seus estados emocionais negativos, com o uso de essências florais medicinais para devolver o equilíbrio.
               </p>
             </div>
             <div class="card">
               <span class="lnr lnr-plus-circle"></span>
               <h3 class="title">Magia Divina</h3>
               <p>
-                Tratamentos para seus cabelos com produtos de qualidade, testados e aprovados pelos orgãos copetentes.
+                Tratamento utilizando da Magia Divina com elementos trabalhando diversas áreas de sua vida, proporcionando profunda limpeza espiritual e equilíbrio.
               </p>
             </div>
           </div>
@@ -146,7 +146,7 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    O melhor salão que eu poderia escolher, fiquei linda e todos elogiaram minha maquiagem e cabelo.
+                    A melhor cartomante que eu poderia escolher, bateu tudo certo com o que ela disse, muito obrigado por me dar uma luz no meu caminho.
                   </p>
                   <cite>
                     <img
@@ -162,7 +162,7 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    Muito atenciosa e com produtos de qualidade me deixou linda para o evento que marcou minha vida, muito obrigado
+                    Muito atenciosa e com os Florais me deixou novinha em folha, me sinto leve e harmonizada com esse tratamento incrível.
                   </p>
                   <cite>
                     <img
@@ -178,7 +178,7 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    Nossa, como fiquei linda, nem sabia que eu poderia ficar tão linda assim.
+                    Nossa como me senti bem depois do tratamento com Magia Divina, tirou tudo que tinha de ruim no meu caminho e me deu força para continuar.
                   </p>
                   <cite>
                     <img
